public/assets/css/main.css
html {
	height: 100%;
}

body {
	margin: 0;
	padding: 0;
	background: #fff url(../img/loading.gif) center center no-repeat;
	color: #333;
	font-family: sans-serif;
	font-size: 13px;
	line-height: 20px;
	height: 100%;
}

#info {

	font-size: 11px;
	position: absolute;
	bottom: 5px;
	background-color: rgba(0,0,0,0.8);
	border-radius: 3px;
	right: 10px;
	padding: 10px;

}

#currentInfo {
	width: 270px;
	position: absolute;
	left: 20px;
	top: 63px;

	border-top: 1px solid rgba(255,255,255,0.4);
	padding: 10px;
}

a {
	color: #aaa;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}

.bull {
	padding: 0 5px;
	color: #555;
}

#title {
	position: absolute;
	top: 20px;
	width: 270px;
	left: 20px;
	background-color: rgba(0,0,0,0.1);
	border-radius: 3px;
	font: 20px Georgia;
	padding: 10px;
}

.year {
	font: 16px Georgia;
	line-height: 26px;
	height: 30px;
	text-align: center;
	float: left;
	width: 90px;
	color: rgba(255, 255, 255, 0.4);

	cursor: pointer;
	-webkit-transition: all 0.1s ease-out;
}

.year:hover, .year.active {
	font-size: 23px;
	color: #fff;
}

#ce span {
	display: none;
}

#ce {
	width: 107px;
	height: 55px;
	display: block;
	position: absolute;
	bottom: 15px;
	left: 20px;
	background: url(../img/ce.png);
}

.fb_iframe_widget, .fb_edge_widget_with_comment {
	position: absolute !important;
	top: 8px;
	right: 4px;
}

